fixed ul alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,10 @@ footer a {
         list-style-type: disc;
     }
 
+    #skills li{
+        width: 210px;
+    }
+
     footer {
         background-color: #f9cdc8;
     }
